# ToyAnimation

./: CMakeLists.txt  Dependencies.cmake  README.md
cmake/: CPM.cmake
inc/: Bone.hpp  Edge.hpp  TriangleMesh.hpp  Vector3f.hpp  matrix4f.hpp  view.hpp
src/: Bone.cpp  CMakeLists.txt  TriangleMesh.cpp  main.cpp  matrix4f.cpp  view.cpp
